k8s/core/test5/overlays/eks/monitoring-overlays/grafana/grafana-tls-ingress-eks.yaml
kind: IngressRoute
apiVersion: traefik.io/v1alpha1
metadata:
  name: grafana-ingress-tls
  namespace: monitoring
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`o11y.test5.gnoteam.com`) || Host(`o11y.test5.gno.land`) 
    kind: Rule
    services:
    - name: grafana
      namespace: monitoring
      port: grafana-port
  tls:
    certResolver: gnoresolver
